@@ -1,3 +1,10 @@
+Wed Jun  8 22:49:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/idl/marshal_generator.cpp:
+        * tests/DCPS/ZeroCopyRead/main.cpp:
+
+          Fixed more GCC 4.6 warnings.
+
 Wed Jun  8 20:45:56 UTC 2011  Paul Calabrese  <calabrese_p@ociweb.com>
 
         * dds/idl/be_produce.cpp:
